--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+#title {
+    margin-top: 2.5%;
+    font-size: 3.3rem;
+    font-family: 'lobster', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+    margin: 3rem auto auto 0;
+    font-family: 'lato', sans-serif;
+    font-weight: bold;
+    position: relative;
+    padding: 0 3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section-container {
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
